# subterfuge-leaderboard

./: .gitignore  Dockerfile  compose.yaml  compose.yaml.example  cronjobs  entrypoint.sh  leaderboard_to_db.py  package-lock.json  package.json  requirements.txt  schema.prisma  worker-configuration.d.ts  wrangler.toml
.github/workflows/: docker-image.yml
app/: navbar.tsx  root.tsx
app/routes/: _index.tsx  about.tsx  api.import.tsx
dataserver/: compose.yaml
dataserver/downloader/: Dockerfile  crontab
dataserver/website/: import.py  requirements.txt
dataserver/website/leaderboard/: admin.py  views.py
dataserver/website/leaderboard/migrations/: 0001_initial.py
dataserver/website/leaderboard/static/: player.js
dataserver/website/leaderboard/templates/: 404.html  about.html  base.html  index.html
dataserver/website/leaderboard/templates/partial/: pagination.html
leaderboard/: admin.py  models.py  settings.py  urls.py  views.py
leaderboard/management/commands/: import.py
leaderboard/migrations/: 0001_initial.py  0002_auto_20210927_1507.py  0003_leaderboardentry_source_file.py  0004_auto_20210927_1521.py
leaderboard/static/: base.css  player.js  search.js
leaderboard/templates/: about.html  base.html  index.html  leaderboard.html  player.html
migrations/: 0001_create_schema.sql
website/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
website/leaderboard/: models.py  settings.py  views.py  wsgi.py
website/leaderboard/migrations/: 0002_auto_20240904_1252.py
website/leaderboard/templates/: player.html  search_results.html
