[project]
name = "subterfuge-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "gunicorn>=23.0.0",
    "lxml>=5.3.2",
    "psycopg2-binary>=2.9.10",
    "tqdm>=4.67.1",
    "whitenoise>=6.9.0",
]
